--- a/order-service.properties
+++ b/order-service.properties
@@ -9,5 +9,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # EUREKA CONFIG
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=localhost
