--- a/order-service.properties
+++ b/order-service.properties
@@ -1,14 +1,15 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/paymentdb
+# MySQL DB Config for Order Service
+spring.datasource.url=jdbc:mysql://localhost:3306/orderdb
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA CONFIG
+# Hibernate / JPA
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
-# EUREKA CONFIG
+# Eureka Client
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
