--- a/payment-service.properties
+++ b/payment-service.properties
@@ -1,6 +1,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/paymentdb
 spring.datasource.username=root
 spring.datasource.password=root1234
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA CONFIG
 spring.jpa.hibernate.ddl-auto=update
