--- a/order-service.properties
+++ b/order-service.properties
@@ -1,5 +1,5 @@
 # MySQL DB Config for Order Service
-spring.datasource.url=jdbc:mysql://localhost:3306/orderdb
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
